bevy_gpu_compute_macro/tests/ui/incorrect_vec_constructor_in_macro.stderr
error[E0639]: cannot create non-exhaustive struct using struct expression
  --> tests/ui/incorrect_vec_constructor_in_macro.rs:6:32
   |
6  |       const MY_CONST: Vec3Bool = Vec3Bool {
   |  ________________________________^
7  | |         x: true,
8  | |         y: false,
9  | |         z: true,
10 | |     };
   | |_____^
